Removing unnecessary files

--- a/Motion Capture/Motion Capture.ipynb
+++ b/Motion Capture/Motion Capture.ipynb
@@ -121,6 +121,51 @@
     }
    },
    "source": [
+    "## Magnetic Tracker\n",
+    "\n",
+    "![Polhemus](fig/polhemus.jpg)\n",
+    "\n",
+    "Polhemus 6 DOF electromagnetic tracker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Mechanical Sensors\n",
+    "\n",
+    "![Glove](fig/glove.jpg)\n",
+    "\n",
+    "Home-built glove with bend sensors and force sensing resistors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Inertial Sensors\n",
+    "\n",
+    "![Inertial](fig/inertial.jpg)\n",
+    "\n",
+    "Various inertial sensors (accelerometer, gyorscope, magnetometer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### Inertial motion capture suite\n",
     "\n",
     "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/mi1UKP7ZvyQ?start=113\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
@@ -149,7 +194,9 @@
    "source": [
     "### Physiological motion capture\n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/L98pL8CEftA\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/L98pL8CEftA\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
+    "\n",
+    "Myo armband with inertial sensors and 8 muscle sensors (EMG)"
    ]
   }
  ],
